--- a/wp-content/themes/bistro-calme/assets/css/styles.css
+++ b/wp-content/themes/bistro-calme/assets/css/styles.css
@@ -6131,4 +6131,4 @@ a img.aligncenter {
   width: auto;
   z-index: 100000;
   /* Above WP toolbar. */
-}/*# sourceMappingURL=styles.min.css.map */
+}/*# sourceMappingURL=styles.css.map */
